Working towards making more compile

--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -1,14 +1,13 @@
 # Main cmakelist
-cmake_minimum_required(VERSION 3.27 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.26 FATAL_ERROR)
 
-set(CUDAToolkit_ROOT /opt/cuda/bin/)
-#set(CUDA_ARCHITECTURES "89")
-#set_target_properties(lima PROPERTIES CUDA_ARCHITECTURES "89")
-set(CMAKE_CUDA_ARCHITECTURES 89)
-set(CMAKE_CUDA_COMPILER /opt/cuda/bin/nvcc)
+#set(CUDAToolkit_ROOT /opt/cuda/bin/)
+set(CMAKE_CUDA_ARCHITECTURES "89")
+#set(CMAKE_CUDA_COMPILER /opt/cuda/bin/nvcc)
 
 project(lima LANGUAGES CXX CUDA)
 
+#set_target_properties(lima PROPERTIES CUDA_ARCHITECTURES "89")
 
 
 set(CMAKE_CXX_STANDARD 20)
@@ -20,7 +19,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++20")
 
 
 #find_package(CUDA REQUIRED)
-#find_package(Chrono)
+#find_package(Chrono REQUIRED)
 
 
 #add_subdirectory(${PROJECT_SOURCE_DIR}/dependencies/GLFW/)
@@ -28,18 +27,20 @@ find_package(OpenGL REQUIRED)
 
 
 add_subdirectory(src/LIMA_BASE)
-#add_subdirectory(LIMA_ENGINE)
-#add_subdirectory(LIMA_FORCFIELDMAKER)
-#add_subdirectory(LIMA_MD)
-add_subdirectory(src/LIMA_TESTS)
+add_subdirectory(src/LIMA_ENGINE)
+#add_subdirectory(src/LIMA_FORCEFIELDMAKER)
+#add_subdirectory(src/LIMA_MD)
+#add_subdirectory(src/LIMA_TESTS)
 
 
+#include_directories("${CUDA_INCLUDE_DIRS}")
+#set(CUDA_LIBRARIES ${CUDA_TOOLKIT_ROOT_DIR}/lib64/libcudart.so)
 #target_link_libraries(lima glfw)
 #target_link_libraries(lima OpenGL::GL)
 
 #target_compile_features(lima PUBLIC cxx_std_20)
 #set_target_properties(lima PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
-#set_target_properties(lima PROPERTIES CUDA_ARCHITECTURES "61;75")
+#set_target_properties(lima PROPERTIES CUDA_ARCHITECTURES "89")
 
 
 #target_include_directories(lima PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
