--- a/code/LIMA_BASE/CMakeLists.txt
+++ b/code/LIMA_BASE/CMakeLists.txt
@@ -1,5 +1,7 @@
 #LIMA_BASE
-cmake_minimum_required(VERSION 3.27 FATAL_ERROR)
+#cmake_minimum_required(VERSION 3.27 FATAL_ERROR)
+
+find_package(CUDA REQUIRED)
 
 
 add_library(LIMA_BASE STATIC
@@ -12,7 +14,11 @@ add_library(LIMA_BASE STATIC
     src/utilities.cpp
 )
 
+
+target_include_directories(LIMA_BASE PRIVATE ${CUDA_INCLUDE_DIRS})
 target_include_directories(LIMA_BASE PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
 
+set_target_properties(LIMA_BASE PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+set_target_properties(LIMA_BASE PROPERTIES CUDA_ARCHITECTURES "89")
