--- a/code/LIMA_MD/CMakeLists.txt
+++ b/code/LIMA_MD/CMakeLists.txt
@@ -1,6 +1,4 @@
 #LIMA_MD
-#cmake_minimum_required(VERSION 3.27 FATAL_ERROR)
-
 find_package(CUDA REQUIRED)
 
 
@@ -17,19 +15,33 @@ add_library(LIMA_MD STATIC
 )
 
 
-target_include_directories(LIMA_MD PRIVATE
-    ${CMAKE_CURRENT_SOURCE_DIR}/src
-    ${CUDA_INCLUDE_DIRS}
-)
 target_include_directories(LIMA_MD PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/include
+    ${CMAKE_SOURCE_DIR}/../dependencies/GLFW/include
+    ${CUDA_INCLUDE_DIRS}    
+
+)
+target_include_directories(LIMA_MD PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/src
 )
 
 
-target_link_libraries(LIMA_ENGINE LIMA_BASE)
-target_link_libraries(LIMA_ENGINE LIMA_ENGINE)
-target_link_libraries(LIMA_ENGINE LIMA_FORCEFIELDMAKER)
+
+target_link_libraries(LIMA_MD LIMA_BASE)
+target_link_libraries(LIMA_MD LIMA_ENGINE)
+target_link_libraries(LIMA_MD LIMA_FORCEFIELDMAKER)
+target_link_libraries(LIMA_MD ${CMAKE_SOURCE_DIR}/../dependencies/GLFW/lib/glfw3.lib)
+#target_include_directories(LIMA_MD PRIVATE ${OPENGL_INCLUDE_DIR})
+target_link_libraries(LIMA_MD ${OPENGL_LIBRARIES})
 
 
 set_target_properties(LIMA_MD PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 set_target_properties(LIMA_MD PROPERTIES CUDA_ARCHITECTURES "89")
+
+
+
+
+
+# Self-test executable
+#add_executable(self_test src/Main.cpp)
+#target_link_libraries(self_test LIMA_MD)
