--- a/code/LIMA_FORCEFIELDMAKER/CMakeLists.txt
+++ b/code/LIMA_FORCEFIELDMAKER/CMakeLists.txt
@@ -1,7 +1,7 @@
 #LIMA_FORCEFIELDMAKER
 #cmake_minimum_required(VERSION 3.27 FATAL_ERROR)
 
-#find_package(CUDA REQUIRED)
+find_package(CUDA REQUIRED)
 
 
 add_library(LIMA_FORCEFIELDMAKER STATIC
@@ -10,12 +10,12 @@ add_library(LIMA_FORCEFIELDMAKER STATIC
 )
 
 
-#target_include_directories(LIMA_FORCEFIELDMAKER PRIVATE ${CUDA_INCLUDE_DIRS})
+target_include_directories(LIMA_FORCEFIELDMAKER PRIVATE ${CUDA_INCLUDE_DIRS})
 target_include_directories(LIMA_FORCEFIELDMAKER PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
 
-target_link_libraries(LIMA_ENGINE LIMA_BASE)
+target_link_libraries(LIMA_FORCEFIELDMAKER LIMA_BASE)
 
 
 #set_target_properties(LIMA_FORCEFIELDMAKER PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
