Looking for linux compile error

--- a/code/LIMA_ENGINE/CMakeLists.txt
+++ b/code/LIMA_ENGINE/CMakeLists.txt
@@ -11,15 +11,19 @@ add_library(LIMA_ENGINE
 )
 
 target_include_directories(LIMA_ENGINE PRIVATE
-${CUDA_INCLUDE_DIRS}
 ${CMAKE_CURRENT_SOURCE_DIR}/src
 )
 
 target_include_directories(LIMA_ENGINE PUBLIC
 ${CMAKE_CURRENT_SOURCE_DIR}/include
+${CUDA_INCLUDE_DIRS}
 )
 
 target_link_libraries(LIMA_ENGINE LIMA_BASE)
 
 set_target_properties(LIMA_ENGINE PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 set_target_properties(LIMA_ENGINE PROPERTIES CUDA_ARCHITECTURES "89")
+
+# Self-test executable
+add_executable(engine_self_test src/Main.cpp)
+target_link_libraries(engine_self_test LIMA_ENGINE)
