--- a/code/LIMA_MD/CMakeLists.txt
+++ b/code/LIMA_MD/CMakeLists.txt
@@ -1,6 +1,6 @@
 #LIMA_MD
 find_package(CUDA REQUIRED)
-
+find_package(OpenGL REQUIRED)
 
 add_library(LIMA_MD STATIC
     src/Analyzer.cu
@@ -17,7 +17,7 @@ add_library(LIMA_MD STATIC
 
 target_include_directories(LIMA_MD PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/include
-    ${CMAKE_SOURCE_DIR}/../dependencies/GLFW/include
+    ${CMAKE_SOURCE_DIR}/dependencies/GLFW/include
     ${CUDA_INCLUDE_DIRS}    
 
 )
@@ -30,7 +30,7 @@ target_include_directories(LIMA_MD PRIVATE
 target_link_libraries(LIMA_MD LIMA_BASE)
 target_link_libraries(LIMA_MD LIMA_ENGINE)
 target_link_libraries(LIMA_MD LIMA_FORCEFIELDMAKER)
-target_link_libraries(LIMA_MD ${CMAKE_SOURCE_DIR}/../dependencies/GLFW/lib/glfw3.lib)
+target_link_libraries(LIMA_MD ${CMAKE_SOURCE_DIR}/dependencies/GLFW/lib/glfw3.lib)
 #target_include_directories(LIMA_MD PRIVATE ${OPENGL_INCLUDE_DIR})
 target_link_libraries(LIMA_MD ${OPENGL_LIBRARIES})
 
@@ -43,5 +43,5 @@ set_target_properties(LIMA_MD PROPERTIES CUDA_ARCHITECTURES "89")
 
 
 # Self-test executable
-#add_executable(self_test src/Main.cpp)
-#target_link_libraries(self_test LIMA_MD)
+add_executable(self_test src/Main.cpp)
+target_link_libraries(self_test LIMA_MD)
