hack engineselftest to compile on arch

--- a/code/LIMA_ENGINE/CMakeLists.txt
+++ b/code/LIMA_ENGINE/CMakeLists.txt
@@ -2,12 +2,15 @@
 
 find_package(CUDA REQUIRED)
 
+set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -arch=sm_89")
+
+
 add_library(LIMA_ENGINE
     src/Engine.cu
     src/EngineKernels.cu
     src/EngineUtils.cu
     src/Neighborlists.cu
-    src/Thermostat.cpp
+    src/Thermostat.cu
 )
 
 target_include_directories(LIMA_ENGINE PRIVATE
@@ -25,5 +28,9 @@ set_target_properties(LIMA_ENGINE PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 set_target_properties(LIMA_ENGINE PROPERTIES CUDA_ARCHITECTURES "89")
 
 # Self-test executable
-add_executable(engine_self_test src/Main.cpp)
+add_executable(engine_self_test src/EngineMain.cpp)
+target_include_directories(engine_self_test PRIVATE    ${CUDA_INCLUDE_DIRS})
+set_target_properties(engine_self_test PROPERTIES CUDA_ARCHITECTURES "89")
+set_target_properties(engine_self_test PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+target_link_libraries(engine_self_test LIMA_BASE)
 target_link_libraries(engine_self_test LIMA_ENGINE)
