--- a/code/LIMA_FORCEFIELDMAKER/CMakeLists.txt
+++ b/code/LIMA_FORCEFIELDMAKER/CMakeLists.txt
@@ -10,13 +10,24 @@ add_library(LIMA_FORCEFIELDMAKER STATIC
 )
 
 
-target_include_directories(LIMA_FORCEFIELDMAKER PRIVATE ${CUDA_INCLUDE_DIRS})
+target_include_directories(LIMA_FORCEFIELDMAKER PRIVATE
+
+)
 target_include_directories(LIMA_FORCEFIELDMAKER PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/include
+    ${CUDA_INCLUDE_DIRS}
 )
 
 target_link_libraries(LIMA_FORCEFIELDMAKER LIMA_BASE)
 
+set_target_properties(LIMA_FORCEFIELDMAKER PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+
 
 #set_target_properties(LIMA_FORCEFIELDMAKER PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 #set_target_properties(LIMA_FORCEFIELDMAKER PROPERTIES CUDA_ARCHITECTURES "89")
+
+
+# Self-test executable
+add_executable(ffm_self_test src/Main.cpp)
+target_link_libraries(ffm_self_test LIMA_BASE)
+target_link_libraries(ffm_self_test LIMA_FORCEFIELDMAKER)
