--- a/code/LIMA_MD/CMakeLists.txt
+++ b/code/LIMA_MD/CMakeLists.txt
@@ -17,9 +17,8 @@ add_library(LIMA_MD STATIC
 
 target_include_directories(LIMA_MD PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/include
-    ${CMAKE_SOURCE_DIR}/dependencies/GLFW/include
     ${CUDA_INCLUDE_DIRS}    
-
+    ${CMAKE_SOURCE_DIR}/dependencies/GLFW/include
 )
 target_include_directories(LIMA_MD PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/src
@@ -30,7 +29,7 @@ target_include_directories(LIMA_MD PRIVATE
 target_link_libraries(LIMA_MD LIMA_BASE)
 target_link_libraries(LIMA_MD LIMA_ENGINE)
 target_link_libraries(LIMA_MD LIMA_FORCEFIELDMAKER)
-target_link_libraries(LIMA_MD ${CMAKE_SOURCE_DIR}/dependencies/GLFW/lib/glfw3.lib)
+#target_link_libraries(LIMA_MD ${CMAKE_SOURCE_DIR}/dependencies/GLFW/lib/glfw3.lib)
 #target_include_directories(LIMA_MD PRIVATE ${OPENGL_INCLUDE_DIR})
 target_link_libraries(LIMA_MD ${OPENGL_LIBRARIES})
 
@@ -42,6 +41,15 @@ set_target_properties(LIMA_MD PROPERTIES CUDA_ARCHITECTURES "89")
 
 
 
+
+
 # Self-test executable
-add_executable(self_test src/Main.cpp)
-target_link_libraries(self_test LIMA_MD)
+#set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} --relocatable-device-code=true")
+find_package(CUDA REQUIRED)
+add_executable(md_self_test src/Main.cpp)
+set_target_properties(md_self_test PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+set_target_properties(md_self_test PROPERTIES CUDA_ARCHITECTURES "89")
+target_link_libraries(md_self_test LIMA_BASE)
+target_link_libraries(md_self_test LIMA_ENGINE)
+target_link_libraries(md_self_test LIMA_FORCEFIELDMAKER)
+target_link_libraries(md_self_test LIMA_MD)
