--- a/code/LIMA_BASE/CMakeLists.txt
+++ b/code/LIMA_BASE/CMakeLists.txt
@@ -1,6 +1,4 @@
 #LIMA_BASE
-#cmake_minimum_required(VERSION 3.27 FATAL_ERROR)
-
 find_package(CUDA REQUIRED)
 
 
@@ -22,3 +20,5 @@ target_include_directories(LIMA_BASE PUBLIC
 
 set_target_properties(LIMA_BASE PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 set_target_properties(LIMA_BASE PROPERTIES CUDA_ARCHITECTURES "89")
+
+target_compile_options(LIMA_BASE PRIVATE -use_fast_math -O3)
