--- a/code/LIMA_TESTS/CMakeLists.txt
+++ b/code/LIMA_TESTS/CMakeLists.txt
@@ -17,3 +17,5 @@ target_link_libraries(limatests LIMA_MD)
 
 set_target_properties(limatests PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 set_target_properties(limatests PROPERTIES CUDA_ARCHITECTURES "89")
+
+target_compile_options(limatests PRIVATE -use_fast_math -O3)
