--- a/code/LIMA_APP/CMakeLists.txt
+++ b/code/LIMA_APP/CMakeLists.txt
@@ -4,8 +4,8 @@ cmake_minimum_required(VERSION 3.26 FATAL_ERROR)
 # We dont need CUDA, but we need the CMAKE error as soon as possible
 project(lima LANGUAGES CXX CUDA)
 
-# Set the installation directory to /opt/LIMA
-set(CMAKE_INSTALL_PREFIX /opt/LIMA)
+# Set the installation directory to /usr/local/bin
+set(CMAKE_INSTALL_PREFIX /usr/local)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_REQUIRED ON)
