--- a/code/LIMA_SERVER/CMakeLists.txt
+++ b/code/LIMA_SERVER/CMakeLists.txt
@@ -2,6 +2,9 @@
 
 find_package(CUDA REQUIRED)
 
+
+# First compile MDRUN
+
 add_executable(mdrun
     mdrun.cpp
 )
@@ -15,10 +18,32 @@ target_link_libraries(mdrun LIMA_MD)
 set_target_properties(mdrun PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 set_target_properties(mdrun PROPERTIES CUDA_ARCHITECTURES "89")
 
-if (UNIX)
-    target_compile_options(limatests PRIVATE -use_fast_math -O3)
-endif()
+#if (UNIX)
+#    target_compile_options(limatests PRIVATE -use_fast_math -O3)
+#endif()
 
 
 #set_target_properties(mdrun PROPERTIES INSTALL_PREFIX ${CMAKE_SOURCE_DIR})
 install(TARGETS mdrun DESTINATION .)
+
+
+
+
+
+# Now compile rest
+add_executable(lima
+    lima.cpp
+)
+
+target_include_directories(lima PRIVATE
+    ${CUDA_INCLUDE_DIRS}
+)
+
+target_link_libraries(lima LIMA_MD)
+
+set_target_properties(lima PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+set_target_properties(lima PROPERTIES CUDA_ARCHITECTURES "89")
+
+
+#set_target_properties(lima PROPERTIES INSTALL_PREFIX ${CMAKE_SOURCE_DIR})
+install(TARGETS lima DESTINATION .)
