Engine is now isolated to env only, but BOXLENNM is still necessary in base to create the solventgrid structure. Also found and fixed bug in membranebuilder that skewed the positions of all lipids

--- a/code/LIMA_BASE/CMakeLists.txt
+++ b/code/LIMA_BASE/CMakeLists.txt
@@ -5,9 +5,9 @@ add_library(LIMA_BASE STATIC
     src/Printer.cpp
     src/Bodies.cu
     src/Filehandling.cpp
-    src/Forcefield.cu
-    src/LimaTypes.cu
-    src/Simulation.cu
+    src/Forcefield.cpp
+    src/LimaTypes.cpp
+    src/Simulation.cpp
     src/utilities.cpp
  "include/MoleculeGraph.h" "src/MoleculeGraph.cpp" "include/MDFiles.h" "src/MDFiles.cpp")
 
