--- a/code/LIMA_ENGINE/CMakeLists.txt
+++ b/code/LIMA_ENGINE/CMakeLists.txt
@@ -9,10 +9,9 @@ add_library(LIMA_ENGINE
     src/Engine.cu
     src/EngineKernels.cu
     src/EngineUtils.cu
-    src/Neighborlists.cu
-    
+    src/Neighborlists.cu 
     src/Thermostat.cu
-)
+    src/BoundaryConditionPublic.cpp)
 
 target_include_directories(LIMA_ENGINE PRIVATE
 ${CMAKE_CURRENT_SOURCE_DIR}/src
@@ -35,5 +34,5 @@ endif()
 
 
 # Self-test executable
-add_executable(engine_self_test src/EngineMain.cpp "src/EngineBodies.cuh")
+add_executable(engine_self_test src/EngineMain.cpp "src/EngineBodies.cuh" "src/BoundaryConditionPublic.cpp")
 target_link_libraries(engine_self_test LIMA_ENGINE)
