--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Main cmakelist
-cmake_minimum_required(VERSION 3.26 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.25 FATAL_ERROR)
 
 if(UNIX)
     set(CMAKE_INSTALL_MESSAGE NEVER)  # Install silently.
@@ -14,6 +14,7 @@ set(CMAKE_CXX_REQUIRED ON)
 set(CMAKE_CUDA_STANDARD 20)
 
 if (UNIX)
+	set(CMAKE_CXX_COMPILER g++-13)
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20")
 	add_definitions(-w)	# Hides the shared varialbe dynamic initilization error in kernels
 endif()
