--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -5,7 +5,7 @@ if(UNIX)
     set(CMAKE_INSTALL_MESSAGE NEVER)  # Install silently.
 endif()
 
-set(CMAKE_CUDA_ARCHITECTURES "89")
+set(CMAKE_CUDA_ARCHITECTURES "89" "75" "61")
 
 project(lima LANGUAGES CXX CUDA)
 
