--- a/code/LIMA_BASE/CMakeLists.txt
+++ b/code/LIMA_BASE/CMakeLists.txt
@@ -1,5 +1,4 @@
-#LIMA_BASE
-find_package(CUDA REQUIRED)
+#LIMA_BASE 
 
 add_library(LIMA_BASE STATIC
     src/Printer.cpp
@@ -9,17 +8,14 @@ add_library(LIMA_BASE STATIC
     src/LimaTypes.cpp
     src/Simulation.cpp
     src/utilities.cpp
- "include/MoleculeGraph.h" "src/MoleculeGraph.cpp" "include/MDFiles.h" "src/MDFiles.cpp")
-
-
+    src/MoleculeGraph.cpp
+    src/MDFiles.cpp
+)
 
 target_include_directories(LIMA_BASE PRIVATE ${CUDA_INCLUDE_DIRS})
 target_include_directories(LIMA_BASE PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
-
-set_target_properties(LIMA_BASE PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
-set_target_properties(LIMA_BASE PROPERTIES CUDA_ARCHITECTURES "89")
 
 if (UNIX)
     target_compile_options(LIMA_BASE PRIVATE -use_fast_math -O3)
