--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,7 @@ find_package(CUDA REQUIRED)
 find_package(OpenGL REQUIRED)
 
 # Set the installation prefix
-set(CMAKE_INSTALL_PREFIX "${CMAKE_CURRENT_SOURCE_DIR}/../applications")
+set(CMAKE_INSTALL_PREFIX "${CMAKE_CURRENT_SOURCE_DIR}/applications")
 
 add_subdirectory(code/LIMA_BASE)
 add_subdirectory(code/LIMA_ENGINE)
