--- a/code/LIMA_APP/CMakeLists.txt
+++ b/code/LIMA_APP/CMakeLists.txt
@@ -24,4 +24,4 @@ target_include_directories(lima PRIVATE
 )
 
 # Specify the installation target
-install(TARGETS lima DESTINATION bin)
+install(TARGETS lima DESTINATION /bin)
