Please just fucking work soon :(

--- a/code/LIMA_TESTS/CMakeLists.txt
+++ b/code/LIMA_TESTS/CMakeLists.txt
@@ -1,7 +1,19 @@
 #LIMA_TESTS
 
-add_executable(limatests
+if(WIN32)
+    enable_language(RC)
+    set(RESOURCE_FILES
+        ${CMAKE_SOURCE_DIR}/resources/logo/logoicon.rc
+    )
+endif()
+
+set(SOURCE_FILES
     src/main.cpp
+)
+add_executable(limatests
+    #src/main.cpp
+    ${SOURCE_FILES}
+    ${RESOURCE_FILES}
 )
 
 target_include_directories(limatests PRIVATE
@@ -15,3 +27,5 @@ target_link_libraries(limatests LIMA_MD)
 if (UNIX)
     target_compile_options(limatests PRIVATE -use_fast_math -O3)
 endif()
+
+message(STATUS "\n Resource files: ${RESOURCE_FILES}")
