Fix overflow errors for nodeIndex. Code cleanup, make alot of ptr's refs, remove duplicate files

--- a/code/LIMA_BASE/CMakeLists.txt
+++ b/code/LIMA_BASE/CMakeLists.txt
@@ -12,6 +12,7 @@ add_library(LIMA_BASE STATIC
     src/MDFiles.cpp
     src/TrrFileInterface.cpp
     src/Statistics.cpp
+    src/BoundaryConditionPublic.cpp
 )
 
 target_include_directories(LIMA_BASE PRIVATE 
