--- a/code/LIMA_ENGINE/CMakeLists.txt
+++ b/code/LIMA_ENGINE/CMakeLists.txt
@@ -1,10 +1,11 @@
 #LIMA_ENGINE
+
+# Do NOT add any other .cu files, the engine should be a single compilation unit
+# in order to access __constant__ memory
 add_library(LIMA_ENGINE
     src/Engine.cu
-    src/EngineKernels.cu
-    src/EngineUtils.cu
-    src/Neighborlists.cu 
-    src/Thermostat.cu
+    #src/EngineKernels.cu
+    src/Thermostat.cu       # TODO: Make .cpp file
     src/ChargeOcttree.cu
 )
 
@@ -22,9 +23,3 @@ target_link_libraries(LIMA_ENGINE LIMA_BASE)
 if (UNIX)
     target_compile_options(LIMA_ENGINE PRIVATE -use_fast_math -O3)
 endif()
-
-
-
-# Self-test executable
-add_executable(engine_self_test src/EngineMain.cu)
-target_link_libraries(engine_self_test LIMA_ENGINE)
