--- a/code/LIMA/CMakeLists.txt
+++ b/code/LIMA/CMakeLists.txt
@@ -4,7 +4,7 @@
 # Now compile rest
 add_executable(lima
     lima.cpp
-)
+ "selftest.h")
 
 target_include_directories(lima PRIVATE
     ${CUDA_INCLUDE_DIRS}
