Massive improvement to Display, as it now can use mousedrag, scroll and click to rotate, and also has implemented some RenderLoops Can now calculate Minimax point. CH is now effectively pruning itself and updateting safely to new CV. Add FPS feature to Display.

--- a/code/LIMA_MD/CMakeLists.txt
+++ b/code/LIMA_MD/CMakeLists.txt
@@ -8,8 +8,8 @@ add_library(LIMA_MD STATIC
     src/Interface.cpp
     src/Rasterizer.cu
     src/Programs.cpp
-    
- "src/Shaders.h")
+    src/Rendering.cpp
+)
 
 
 
