More updates, next we will move computeTransformMatrix to Thrust

--- a/code/LIMA_BASE/CMakeLists.txt
+++ b/code/LIMA_BASE/CMakeLists.txt
@@ -14,7 +14,7 @@ add_library(LIMA_BASE STATIC
     src/Statistics.cpp
     src/BoundaryConditionPublic.cpp
     src/MoleculeHull.cpp
-)
+    src/TimeIt.cpp)
 
 target_include_directories(LIMA_BASE PRIVATE 
  #   /../dependencies/cereal
