--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,8 +40,8 @@ find_package(OpenGL REQUIRED)
 find_package(CUDAToolkit REQUIRED)
 find_package(PythonLibs REQUIRED)
 
-include_directories(${PYTHON_INCLUDE_DIRS})
-link_directories(${PYTHON_LIBRARIES})
+#include_directories(${PYTHON_INCLUDE_DIRS})
+#link_directories(${PYTHON_LIBRARIES})
 
 if (UNIX)
 	find_package(glm REQUIRED)
