Add wonkyness to membranes

--- a/code/LIMA_TESTS/CMakeLists.txt
+++ b/code/LIMA_TESTS/CMakeLists.txt
@@ -10,20 +10,20 @@ endif()
 set(SOURCE_FILES
     src/main.cpp
 )
-add_executable(limatests
+add_executable(LIMA_TESTS
     ${SOURCE_FILES}
     ${RESOURCE_FILES}
  "src/ForcefieldTests.h")
 
-target_include_directories(limatests PRIVATE
+target_include_directories(LIMA_TESTS PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/src
 )
 
-target_link_libraries(limatests LIMA_BASE)
-target_link_libraries(limatests LIMA_MD)
+target_link_libraries(LIMA_TESTS LIMA_BASE)
+target_link_libraries(LIMA_TESTS LIMA_MD)
 
 if (UNIX)
-    target_compile_options(limatests PRIVATE -use_fast_math -O3)
+    target_compile_options(LIMA_TESTS PRIVATE -use_fast_math -O3)
 endif()
 
 message(STATUS "\n Resource files: ${RESOURCE_FILES}")
