--- a/code/LIMA_ENGINE/CMakeLists.txt
+++ b/code/LIMA_ENGINE/CMakeLists.txt
@@ -7,7 +7,7 @@ add_library(LIMA_ENGINE STATIC
     src/Thermostat.cu       # TODO: Make .cpp file
     src/ChargeOcttree.cu
     src/ConvexHullEngine.cu
-)
+ "src/SimulationDevice.cpp")
 
 target_include_directories(LIMA_ENGINE PRIVATE
 ${CMAKE_CURRENT_SOURCE_DIR}/src
