Fix gcc errors. Move resources from /opt to /usr/share

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,8 +63,5 @@ add_subdirectory(code/LIMA)
 
 if (UNIX)
 	# Copy the resources to the appropriate directory
-	install(DIRECTORY ${CMAKE_SOURCE_DIR}/resources/ DESTINATION /opt/LIMA/resources)
-
-	# Add a post-installation step to set the permissions
-	install(CODE "execute_process(COMMAND chmod -R a+rw /opt/LIMA/resources)")
+	install(DIRECTORY ${CMAKE_SOURCE_DIR}/resources/ DESTINATION /usr/share/LIMA/resources)
 endif()
