--- a/distribution/debian/debian/control
+++ b/distribution/debian/debian/control
@@ -8,5 +8,6 @@ Homepage: http://www.lima-dynamics.com
 
 Package: lima
 Architecture: amd64
-Depends: ${shlibs:Depends}, ${misc:Depends}, libc6, glu, bash, libglvnd0
+Depends: ${shlibs:Depends}, ${misc:Depends}, libc6, libglu1-mesa, libglvnd0
 Description: The Molecular Dynamics engine for the Generative Era
+ LIMA is a high-performance molecular dynamics engine designed for modern scientific computations and generative modeling.
