--- a/.gitignore
+++ b/.gitignore
@@ -46,9 +46,9 @@ out*
 /dev/energy_data.bin
 /dev/PyTools/Energies.py
 
-*.gro.bin
-*.top.bin
-*.itp.bin
+#*.gro.bin
+#*.top.bin
+#*.itp.bin
 
 # Ignore all files in the deb build folder, except the .deb file
 /distribution/debian/build/*
